--- a/ACA.ipynb
+++ b/ACA.ipynb
@@ -228,48 +228,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: 100/59700 runs done\n",
-      "Progress: 200/59700 runs done\n",
-      "Progress: 300/59700 runs done\n",
-      "Progress: 400/59700 runs done\n",
-      "Progress: 500/59700 runs done\n",
-      "Progress: 600/59700 runs done\n",
-      "Progress: 700/59700 runs done\n",
-      "Progress: 800/59700 runs done\n",
-      "Progress: 900/59700 runs done\n",
-      "Progress: 1000/59700 runs done\n",
-      "Progress: 1100/59700 runs done\n",
-      "Progress: 1200/59700 runs done\n",
-      "Progress: 1300/59700 runs done\n",
-      "Progress: 1400/59700 runs done\n",
-      "Progress: 1500/59700 runs done\n",
-      "Progress: 1600/59700 runs done\n",
-      "Progress: 1700/59700 runs done\n",
-      "Progress: 1800/59700 runs done\n",
-      "Progress: 1900/59700 runs done\n",
-      "Progress: 2000/59700 runs done\n",
-      "Progress: 2100/59700 runs done\n",
-      "Progress: 2200/59700 runs done\n",
-      "Progress: 2300/59700 runs done\n",
-      "Progress: 2400/59700 runs done\n",
-      "Progress: 2500/59700 runs done\n",
-      "Progress: 2600/59700 runs done\n",
-      "Progress: 2700/59700 runs done\n",
-      "Progress: 2800/59700 runs done\n",
-      "Progress: 2900/59700 runs done\n",
-      "Progress: 3000/59700 runs done\n",
-      "Progress: 3100/59700 runs done\n",
-      "Progress: 3200/59700 runs done\n",
-      "Progress: 3300/59700 runs done\n",
-      "Progress: 3400/59700 runs done\n",
-      "Progress: 3500/59700 runs done\n",
-      "Progress: 3600/59700 runs done\n",
-      "Progress: 3700/59700 runs done\n",
-      "Progress: 3800/59700 runs done\n",
-      "Progress: 3900/59700 runs done\n",
-      "Progress: 4000/59700 runs done\n",
-      "Progress: 4100/59700 runs done\n",
-      "Progress: 4200/59700 runs done\n"
+      "Progress: 100/45000 runs done\n",
+      "Last run: dist=uniform, n=10, rep=99, prim_time=0.000027, kruskal_time=0.000019, prim_cost=1.481829, kruskal_cost=1.481829\n",
+      "Progress: 200/45000 runs done\n",
+      "Last run: dist=uniform, n=20, rep=99, prim_time=0.000085, kruskal_time=0.000071, prim_cost=1.524499, kruskal_cost=1.524499\n",
+      "Progress: 300/45000 runs done\n",
+      "Last run: dist=uniform, n=30, rep=99, prim_time=0.000181, kruskal_time=0.000177, prim_cost=0.845440, kruskal_cost=0.845440\n",
+      "Progress: 400/45000 runs done\n",
+      "Last run: dist=uniform, n=40, rep=99, prim_time=0.000335, kruskal_time=0.000301, prim_cost=1.105734, kruskal_cost=1.105734\n",
+      "Progress: 500/45000 runs done\n",
+      "Last run: dist=uniform, n=50, rep=99, prim_time=0.000527, kruskal_time=0.000455, prim_cost=0.921458, kruskal_cost=0.921458\n",
+      "Progress: 600/45000 runs done\n",
+      "Last run: dist=uniform, n=60, rep=99, prim_time=0.000814, kruskal_time=0.000902, prim_cost=1.170536, kruskal_cost=1.170536\n",
+      "Progress: 700/45000 runs done\n",
+      "Last run: dist=uniform, n=70, rep=99, prim_time=0.001459, kruskal_time=0.002417, prim_cost=1.150935, kruskal_cost=1.150935\n",
+      "Progress: 800/45000 runs done\n",
+      "Last run: dist=uniform, n=80, rep=99, prim_time=0.001311, kruskal_time=0.002404, prim_cost=1.229986, kruskal_cost=1.229986\n",
+      "Progress: 900/45000 runs done\n",
+      "Last run: dist=uniform, n=90, rep=99, prim_time=0.001619, kruskal_time=0.002177, prim_cost=1.091497, kruskal_cost=1.091497\n",
+      "Progress: 1000/45000 runs done\n",
+      "Last run: dist=uniform, n=100, rep=99, prim_time=0.002086, kruskal_time=0.002388, prim_cost=1.178118, kruskal_cost=1.178118\n",
+      "Progress: 1100/45000 runs done\n",
+      "Last run: dist=uniform, n=110, rep=99, prim_time=0.002485, kruskal_time=0.003442, prim_cost=1.510424, kruskal_cost=1.510424\n",
+      "Progress: 1200/45000 runs done\n",
+      "Last run: dist=uniform, n=120, rep=99, prim_time=0.003803, kruskal_time=0.004364, prim_cost=1.165528, kruskal_cost=1.165528\n",
+      "Progress: 1300/45000 runs done\n",
+      "Last run: dist=uniform, n=130, rep=99, prim_time=0.003535, kruskal_time=0.004031, prim_cost=1.237356, kruskal_cost=1.237356\n",
+      "Progress: 1400/45000 runs done\n",
+      "Last run: dist=uniform, n=140, rep=99, prim_time=0.004126, kruskal_time=0.005260, prim_cost=1.333228, kruskal_cost=1.333228\n",
+      "Progress: 1500/45000 runs done\n",
+      "Last run: dist=uniform, n=150, rep=99, prim_time=0.004259, kruskal_time=0.005308, prim_cost=1.184028, kruskal_cost=1.184028\n",
+      "Progress: 1600/45000 runs done\n",
+      "Last run: dist=uniform, n=160, rep=99, prim_time=0.004928, kruskal_time=0.006642, prim_cost=1.163831, kruskal_cost=1.163831\n",
+      "Progress: 1700/45000 runs done\n",
+      "Last run: dist=uniform, n=170, rep=99, prim_time=0.005107, kruskal_time=0.006950, prim_cost=1.101018, kruskal_cost=1.101018\n",
+      "Progress: 1800/45000 runs done\n",
+      "Last run: dist=uniform, n=180, rep=99, prim_time=0.006557, kruskal_time=0.010901, prim_cost=1.189804, kruskal_cost=1.189804\n",
+      "Progress: 1900/45000 runs done\n",
+      "Last run: dist=uniform, n=190, rep=99, prim_time=0.007060, kruskal_time=0.010732, prim_cost=1.147953, kruskal_cost=1.147953\n",
+      "Progress: 2000/45000 runs done\n",
+      "Last run: dist=uniform, n=200, rep=99, prim_time=0.007853, kruskal_time=0.012109, prim_cost=1.228963, kruskal_cost=1.228963\n",
+      "Progress: 2100/45000 runs done\n",
+      "Last run: dist=uniform, n=210, rep=99, prim_time=0.008096, kruskal_time=0.012894, prim_cost=1.196933, kruskal_cost=1.196933\n",
+      "Progress: 2200/45000 runs done\n",
+      "Last run: dist=uniform, n=220, rep=99, prim_time=0.009246, kruskal_time=0.012383, prim_cost=1.091137, kruskal_cost=1.091137\n",
+      "Progress: 2300/45000 runs done\n",
+      "Last run: dist=uniform, n=230, rep=99, prim_time=0.009997, kruskal_time=0.016689, prim_cost=1.151967, kruskal_cost=1.151967\n",
+      "Progress: 2400/45000 runs done\n",
+      "Last run: dist=uniform, n=240, rep=99, prim_time=0.010341, kruskal_time=0.016418, prim_cost=1.148727, kruskal_cost=1.148727\n",
+      "Progress: 2500/45000 runs done\n",
+      "Last run: dist=uniform, n=250, rep=99, prim_time=0.011617, kruskal_time=0.017824, prim_cost=1.105375, kruskal_cost=1.105375\n",
+      "Progress: 2600/45000 runs done\n",
+      "Last run: dist=uniform, n=260, rep=99, prim_time=0.014261, kruskal_time=0.021475, prim_cost=1.255503, kruskal_cost=1.255503\n",
+      "Progress: 2700/45000 runs done\n",
+      "Last run: dist=uniform, n=270, rep=99, prim_time=0.014257, kruskal_time=0.022905, prim_cost=1.166145, kruskal_cost=1.166145\n",
+      "Progress: 2800/45000 runs done\n",
+      "Last run: dist=uniform, n=280, rep=99, prim_time=0.015224, kruskal_time=0.027011, prim_cost=1.224445, kruskal_cost=1.224445\n",
+      "Progress: 2900/45000 runs done\n",
+      "Last run: dist=uniform, n=290, rep=99, prim_time=0.015638, kruskal_time=0.027005, prim_cost=1.199667, kruskal_cost=1.199667\n",
+      "Progress: 3000/45000 runs done\n",
+      "Last run: dist=uniform, n=300, rep=99, prim_time=0.016554, kruskal_time=0.027365, prim_cost=1.116309, kruskal_cost=1.116309\n",
+      "Progress: 3100/45000 runs done\n",
+      "Last run: dist=gamma, n=10, rep=99, prim_time=0.000027, kruskal_time=0.000020, prim_cost=37.010458, kruskal_cost=37.010458\n",
+      "Progress: 3200/45000 runs done\n",
+      "Last run: dist=gamma, n=20, rep=99, prim_time=0.000085, kruskal_time=0.000068, prim_cost=55.159486, kruskal_cost=55.159486\n",
+      "Progress: 3300/45000 runs done\n",
+      "Last run: dist=gamma, n=30, rep=99, prim_time=0.000183, kruskal_time=0.000148, prim_cost=55.150244, kruskal_cost=55.150244\n",
+      "Progress: 3400/45000 runs done\n",
+      "Last run: dist=gamma, n=40, rep=99, prim_time=0.000315, kruskal_time=0.000278, prim_cost=60.851199, kruskal_cost=60.851199\n",
+      "Progress: 3500/45000 runs done\n",
+      "Last run: dist=gamma, n=50, rep=99, prim_time=0.000509, kruskal_time=0.000453, prim_cost=94.189005, kruskal_cost=94.189005\n",
+      "Progress: 3600/45000 runs done\n",
+      "Last run: dist=gamma, n=60, rep=99, prim_time=0.000704, kruskal_time=0.000662, prim_cost=95.003464, kruskal_cost=95.003464\n",
+      "Progress: 3700/45000 runs done\n",
+      "Last run: dist=gamma, n=70, rep=99, prim_time=0.000902, kruskal_time=0.000881, prim_cost=103.722836, kruskal_cost=103.722836\n",
+      "Progress: 3800/45000 runs done\n",
+      "Last run: dist=gamma, n=80, rep=99, prim_time=0.001257, kruskal_time=0.001245, prim_cost=114.382199, kruskal_cost=114.382199\n",
+      "Progress: 3900/45000 runs done\n",
+      "Last run: dist=gamma, n=90, rep=99, prim_time=0.001588, kruskal_time=0.001598, prim_cost=127.331254, kruskal_cost=127.331254\n",
+      "Progress: 4000/45000 runs done\n",
+      "Last run: dist=gamma, n=100, rep=99, prim_time=0.002428, kruskal_time=0.002686, prim_cost=134.003473, kruskal_cost=134.003473\n",
+      "Progress: 4100/45000 runs done\n",
+      "Last run: dist=gamma, n=110, rep=99, prim_time=0.002725, kruskal_time=0.003146, prim_cost=152.201201, kruskal_cost=152.201201\n",
+      "Progress: 4200/45000 runs done\n",
+      "Last run: dist=gamma, n=120, rep=99, prim_time=0.003243, kruskal_time=0.004129, prim_cost=150.649350, kruskal_cost=150.649350\n",
+      "Progress: 4300/45000 runs done\n",
+      "Last run: dist=gamma, n=130, rep=99, prim_time=0.003680, kruskal_time=0.004519, prim_cost=160.758494, kruskal_cost=160.758494\n",
+      "Progress: 4400/45000 runs done\n",
+      "Last run: dist=gamma, n=140, rep=99, prim_time=0.003864, kruskal_time=0.004794, prim_cost=159.438290, kruskal_cost=159.438290\n",
+      "Progress: 4500/45000 runs done\n",
+      "Last run: dist=gamma, n=150, rep=99, prim_time=0.005416, kruskal_time=0.007467, prim_cost=162.763103, kruskal_cost=162.763103\n",
+      "Progress: 4600/45000 runs done\n",
+      "Last run: dist=gamma, n=160, rep=99, prim_time=0.005911, kruskal_time=0.007996, prim_cost=178.575967, kruskal_cost=178.575967\n",
+      "Progress: 4700/45000 runs done\n",
+      "Last run: dist=gamma, n=170, rep=99, prim_time=0.005886, kruskal_time=0.007407, prim_cost=184.549748, kruskal_cost=184.549748\n",
+      "Progress: 4800/45000 runs done\n",
+      "Last run: dist=gamma, n=180, rep=99, prim_time=0.006339, kruskal_time=0.008325, prim_cost=186.541919, kruskal_cost=186.541919\n",
+      "Progress: 4900/45000 runs done\n",
+      "Last run: dist=gamma, n=190, rep=99, prim_time=0.006988, kruskal_time=0.008687, prim_cost=196.321605, kruskal_cost=196.321605\n",
+      "Progress: 5000/45000 runs done\n",
+      "Last run: dist=gamma, n=200, rep=99, prim_time=0.007675, kruskal_time=0.009759, prim_cost=212.052499, kruskal_cost=212.052499\n",
+      "Progress: 5100/45000 runs done\n",
+      "Last run: dist=gamma, n=210, rep=99, prim_time=0.008361, kruskal_time=0.011092, prim_cost=203.927551, kruskal_cost=203.927551\n",
+      "Progress: 5200/45000 runs done\n",
+      "Last run: dist=gamma, n=220, rep=99, prim_time=0.010315, kruskal_time=0.015148, prim_cost=210.473182, kruskal_cost=210.473182\n",
+      "Progress: 5300/45000 runs done\n",
+      "Last run: dist=gamma, n=230, rep=99, prim_time=0.011573, kruskal_time=0.016918, prim_cost=222.480285, kruskal_cost=222.480285\n",
+      "Progress: 5400/45000 runs done\n",
+      "Last run: dist=gamma, n=240, rep=99, prim_time=0.011812, kruskal_time=0.020176, prim_cost=227.124972, kruskal_cost=227.124972\n",
+      "Progress: 5500/45000 runs done\n",
+      "Last run: dist=gamma, n=250, rep=99, prim_time=0.014098, kruskal_time=0.019861, prim_cost=234.541051, kruskal_cost=234.541051\n",
+      "Progress: 5600/45000 runs done\n",
+      "Last run: dist=gamma, n=260, rep=99, prim_time=0.016200, kruskal_time=0.025156, prim_cost=249.098207, kruskal_cost=249.098207\n",
+      "Progress: 5700/45000 runs done\n",
+      "Last run: dist=gamma, n=270, rep=99, prim_time=0.016924, kruskal_time=0.029591, prim_cost=238.715654, kruskal_cost=238.715654\n"
      ]
     }
    ],
@@ -283,9 +355,6 @@
     "import matplotlib.pyplot as plt\n",
     "from heapq import heappush, heappop\n",
     "\n",
-    "# Jeśli masz już DSU i Graph z def. w Twoim kodzie, możesz użyć ich.\n",
-    "# Tutaj zakładam minimalną niezależność i definiuję DSU / generator grafów lokalnie,\n",
-    "# ale możesz też korzystać z istniejącej klasy Graph.\n",
     "\n",
     "class DSU:\n",
     "  def __init__(self, n):\n",
@@ -383,9 +452,9 @@
     "        break\n",
     "  return cost\n",
     "\n",
-    "# --- Parametry eksperymentu (dostosuj) ---\n",
-    "n_min = 20\n",
-    "n_max = 2000\n",
+    "# --- Parametry eksperymentu ---\n",
+    "n_min = 10\n",
+    "n_max = 300\n",
     "step = 10\n",
     "reps = 100\n",
     "\n",
@@ -393,7 +462,19 @@
     "  ('uniform', (0.0, 1.0)),\n",
     "  # ('gamma', (2.0, 1.0)),\n",
     "  ('gamma', (math.pi, math.e)),\n",
-    "  ('beta', (math.pi, math.e))\n",
+    "  ('beta', (math.pi, math.e)),\n",
+    "  ('beta', (0.5, 0.5)),\n",
+    "  ('beta', (1, 2)),\n",
+    "  ('beta', (1, 3)),\n",
+    "  ('beta', (2, 1)),\n",
+    "  ('beta', (2, 2)),\n",
+    "  ('beta', (0.5, 2)),\n",
+    "  ('beta', (0.1, 0.7)),\n",
+    "  ('gamma', (2, 2)),\n",
+    "  ('gamma', (1, 2)),\n",
+    "  ('gamma', (2, 1)),\n",
+    "  ('gamma', (2, 3)),\n",
+    "  ('gamma', (2, 4))\n",
     "]\n",
     "\n",
     "# dla powtarzalności:\n",
@@ -436,6 +517,7 @@
     "\n",
     "      if run_i % 100 == 0:\n",
     "        print(f'Progress: {run_i}/{total_runs} runs done')\n",
+    "        print(f'Last run: dist={dist_name}, n={n}, rep={rep}, prim_time={prim_time:.6f}, kruskal_time={kruskal_time:.6f}, prim_cost={prim_cost:.6f}, kruskal_cost={kruskal_cost:.6f}')\n",
     "\n",
     "df = pd.DataFrame(rows)\n",
     "\n",
@@ -505,10 +587,10 @@
     "  plt.show()\n",
     "\n",
     "# Zapis wyników do csv\n",
-    "df.to_csv('mst_experiment_raw.csv', index=False)\n",
-    "summary_df.to_csv('mst_experiment_summary.csv', index=False)\n",
+    "df.to_csv('mst_experiment_raw1.csv', index=False)\n",
+    "summary_df.to_csv('mst_experiment_summary1.csv', index=False)\n",
     "\n",
-    "print('Wszystkie wyniki zapisane: mst_experiment_raw.csv i mst_experiment_summary.csv')\n"
+    "print('Wszystkie wyniki zapisane: mst_experiment_raw1.csv i mst_experiment_summary1.csv')\n"
    ]
   }
  ],
