--- a/ACA.ipynb
+++ b/ACA.ipynb
@@ -1902,7 +1902,7 @@
    "id": "50c729ec",
    "metadata": {},
    "source": [
-    "### Generowanie wykresóœ"
+    "### Generowanie wykresów"
    ]
   },
   {
